tests/baselines/reference/regularExpressionUnicodePropertyValueExpressionSuggestions.errors.txt
regularExpressionUnicodePropertyValueExpressionSuggestions.ts(1,19): error TS1529: Unknown Unicode property name or value.
regularExpressionUnicodePropertyValueExpressionSuggestions.ts(1,28): error TS1524: Unknown Unicode property name.
regularExpressionUnicodePropertyValueExpressionSuggestions.ts(1,45): error TS1526: Unknown Unicode property value.
regularExpressionUnicodePropertyValueExpressionSuggestions.ts(1,55): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


==== regularExpressionUnicodePropertyValueExpressionSuggestions.ts (4 errors) ====
    const regex = /\p{ascii}\p{Sc=Unknown}\p{sc=unknownX}/u;
                      ~~~~~
!!! error TS1529: Unknown Unicode property name or value.
!!! related TS1369: Did you mean 'ASCII'?
                               ~~
!!! error TS1524: Unknown Unicode property name.
!!! related TS1369: Did you mean 'sc'?
                                                ~~~~~~~~
!!! error TS1526: Unknown Unicode property value.
!!! related TS1369: Did you mean 'Unknown'?
                                                          ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    